--- a/MP01_Product_API/src/main/resources/application.properties
+++ b/MP01_Product_API/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=MP01_Product_API
+
+spring.datasource.url = jdbc:mysql://localhost:3306/jrtp
+spring.datasource.username = root
+spring.datasource.password=root
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.show-sql=true
