--- a/MP03_Customer_API/src/main/resources/application.properties
+++ b/MP03_Customer_API/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=MP03_Customer_API
 
+#spring.main.allow-circular-references=true
 
 spring.datasource.url = jdbc:mysql://localhost:3306/jrtp
 spring.datasource.username = root
@@ -8,3 +9,11 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
+
+
+spring.mail.host = smtp.gmail.com
+spring.mail.port=587
+spring.mail.username = lakshminarasammayarram@gmail.com
+spring.mail.password = vhfk qclj eceu mbts
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
